--- a/SSISSpeachToText/SSISSpeachToText.csproj
+++ b/SSISSpeachToText/SSISSpeachToText.csproj
@@ -69,6 +69,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -77,6 +78,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SpeachToTextForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SpeachToTextForm.Designer.cs">
+      <DependentUpon>SpeachToTextForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="SSISSpeachToText.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -85,7 +92,10 @@
     <None Include="SSISSpeachToText.snk" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="if_microphone_497229.ico" />
+    <EmbeddedResource Include="if_microphone_497229.ico" />
+    <EmbeddedResource Include="SpeachToTextForm.resx">
+      <DependentUpon>SpeachToTextForm.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
