--- a/SSISSpeechToText/packages.config
+++ b/SSISSpeechToText/packages.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.ProjectOxford.SpeechRecognition-x86" version="1.0.0.7" targetFramework="net46" />
+  <package id="Bond.Core.CSharp" version="7.0.1" targetFramework="net46" />
+  <package id="Bond.CSharp" version="7.0.1" targetFramework="net46" />
+  <package id="Bond.Runtime.CSharp" version="7.0.1" targetFramework="net46" />
+  <package id="Microsoft.Bing.Speech" version="2.0.2" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Threading" version="15.6.46" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Threading.Analyzers" version="15.6.46" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Validation" version="15.3.32" targetFramework="net46" />
   <package id="NAudio" version="1.8.4" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net46" />
 </packages>
