--- a/SSISSpeechToText/SSISSpeechToText.csproj
+++ b/SSISSpeechToText/SSISSpeechToText.csproj
@@ -102,6 +102,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -111,6 +112,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CognitiveServicesAuthorizationProvider.cs" />
     <Compile Include="DataFlowComponentUI.cs" />
     <Compile Include="SpeechToTextForm.cs">
       <SubType>Form</SubType>
@@ -118,6 +120,7 @@
     <Compile Include="SpeechToTextForm.Designer.cs">
       <DependentUpon>SpeechToTextForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="SpeechToTextImplement.cs" />
     <Compile Include="SSISSpeechToTextUI.cs" />
     <Compile Include="SSISSpeechToText.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
