--- a/SSISSpeechToText/packages.config
+++ b/SSISSpeechToText/packages.config
@@ -9,4 +9,5 @@
   <package id="Microsoft.VisualStudio.Validation" version="15.3.32" targetFramework="net46" />
   <package id="NAudio" version="1.8.4" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net46" />
+  <package id="StrongNamer" version="0.0.6" targetFramework="net46" />
 </packages>
