--- a/TestSpeechToText/packages.config
+++ b/TestSpeechToText/packages.config
@@ -1,5 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Bond.Core.CSharp" version="4.2.1" targetFramework="net46" />
+  <package id="Bond.CSharp" version="4.2.1" targetFramework="net46" />
+  <package id="Bond.Runtime.CSharp" version="4.2.1" targetFramework="net46" />
+  <package id="Microsoft.Bing.Speech" version="2.0.2" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Threading" version="14.1.131" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Validation" version="14.1.111" targetFramework="net46" />
   <package id="MSTest.TestAdapter" version="1.2.0" targetFramework="net46" />
   <package id="MSTest.TestFramework" version="1.2.0" targetFramework="net46" />
+  <package id="NAudio" version="1.8.4" targetFramework="net46" />
+  <package id="Newtonsoft.Json" version="8.0.1" targetFramework="net46" />
+  <package id="StrongNamer" version="0.0.6" targetFramework="net46" />
 </packages>
